--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -18,7 +18,7 @@
             <div class="col s12 col m8 offset-m2">
                 <div class="card">
                     <div class="card-content">
-                        <h5>Ya casi es tuyo!</h5>
+                        <h5>Nuevo Pedido!</h5>
                         <p>Revisá que este todo en orden</p>
                         <div class="detail-image-container hide-on-med-and-up" style="background-image: url('<%= order.Product.image %>')"></div>
                         <div class="detail-image-container medium hide-on-large-only hide-on-small-only" style="background-image: url('<%= order.Product.image %>')"></div>
@@ -29,7 +29,7 @@
                                 <p class="center-align">$<%= order.Product.price %></p>
                             </div>
                         </div>
-                        <div class="row file-uploader margin-bottom-0">
+                        <div class="file-uploader margin-bottom-0">
                             <ul class="collection">
                                 <li class="collection-item avatar">
                                     <img class="circle responsive-img" src="<%= order.Background.image %>">
@@ -48,53 +48,39 @@
                         <h5 class="center-align">Total $<%= order.Product.price + order.Background.price + order.Text.Typography.price %></h5>
                         <br>
                         <div class="row">
-                            <div class="col s12">
-                                <h6>Seleccioná la Forma de entrega</h6>
-                                <p>
-                                    <label>
-                                        <input class="with-gap primary-color" name="deliveryMethod" type="radio" value="deliveryPoint" onchange="processDeliveryMethod()"
-                                        <% if(order && order.deliveryMethod == 'deliveryPoint') { %> checked <% } %>>
-                                        <span>Lo retiro en un punto de entrega (Constitucion, Quilmes, Berazategui, La Plata)</span>
-                                    </label>
-                                </p>
-                                <p>
-                                    <label>
-                                        <input class="with-gap primary-color" name="deliveryMethod" type="radio" value="shipping" onchange="processDeliveryMethod()"
-                                        <% if(order && order.deliveryMethod == 'shipping') { %> checked <% } %>>
-                                        <span>Envío a través de MercadoEnvíos</span>
-                                    </label>
-                                </p>
+                            <div class="col s6">
+                                <ul class="collection with-header fb-collection">
+                                    <li class="collection-header">
+                                        <h6 class="margin-bottom-0 margin-top-0"><b>Método de Pago</b></h6>
+                                    </li>
+                                    <li class="collection-item center-align"><%= order.paymentMethod == 'mercadopago' ? 'MercadoPago' : 'Efectivo' %></li>
+                                </ul>
+                            </div>
+                            <div class="col s6">
+                                <ul class="collection with-header fb-collection">
+                                    <li class="collection-header">
+                                        <h6 class="margin-bottom-0 margin-top-0"><b>Forma de Entrega</b></h6>
+                                    </li>
+                                    <li class="collection-item center-align"><%= order.deliveryMethod == 'shipping' ? 'Envío' : 'Punto de Entrega' %></li>
+                                </ul>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col s12">
-                                <h6>Seleccioná el método de pago</h6>
-                                <p>
-                                    <label>
-                                        <input class="with-gap primary-color" name="paymentMethod" type="radio" value="cash" onchange="processPaymentMethod()"
-                                        <% if(order && order.paymentMethod == 'cash') { %> checked <% } %>>
-                                        <span>Efectivo</span>
-                                    </label>
-                                </p>
-                                <p>
-                                    <label>
-                                        <input class="with-gap primary-color" name="paymentMethod" type="radio" value="mercadopago" onchange="processPaymentMethod()"
-                                        <% if(order && order.paymentMethod == 'mercadopago') { %> checked <% } %>>
-                                        <span>MercadoPago (Tarjeta de crédito/Debito)</span>
-                                    </label>
-                                </p>
+                                <ul class="collection with-header fb-collection">
+                                    <li class="collection-header">
+                                        <h6 class="margin-bottom-0 margin-top-0"><b>Datos Personales</b></h6>
+                                    </li>
+                                    <li class="collection-item"><b>Nombre:</b> <%= order.name %></li>
+                                    <li class="collection-item"><b>Apellido:</b> <%= order.surname %></li>
+                                    <li class="collection-item"><b>Teléfono:</b> <%= order.cellphone %></li>
+                                    <li class="collection-item"><b>Instagram:</b> <%= order.instagramUser %></li>
+                                </ul>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s12">
-                                <p class="mercadopago-alert required" <% if(order && order.paymentMethod != 'mercadopago') { %> style="display: none" <% } %>>Al pulsar finalizar seras redirigid@ al portal de MercadoPago para realizar tu pago y/o configurar tu envío.</p>
-                            </div>                            
                         </div>
                     </div>
                     <div class="card-action right-align">
-                        <a href="/customer_info/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
-                        <a class="waves-effect waves-light-3 btn btn-primary btn-next
-                        <% if(!dataIsValid) { %> disabled <% } %>">Finalizar</a>
+                        <a class="waves-effect waves-light-3 btn btn-primary btn-next"><i class="material-icons left">cloud_download</i>Descargar</a>
                     </div>
                 </div>
             </div>
@@ -103,7 +89,6 @@
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/materialize/js/materialize.min.js"></script>
-<script src="/js/services/orderService.js"></script>
 <% if (order) { %>
 <script>
     var orderId = "<%= order.hash %>";
@@ -113,6 +98,5 @@
     var orderId = 'default';
 </script>
 <% } %>
-<script src="/js/detail.js"></script>
 
 </html>
