--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -189,6 +189,16 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     background-color: rgba(0, 0, 0, 0.25);
 }
 
+/* collection */
+.collection.fb-collection > .collection-header {
+    color: white;
+    background-color: rgb(135, 118, 40);
+}
+.collection.fb-collection > .collection-item {
+    padding: 10px 20px;
+}
+
+
 /*Animations*/
 @keyframes slide-up {
     0% {
