--- a/app/web/views/customer_info.html
+++ b/app/web/views/customer_info.html
@@ -26,12 +26,12 @@
                         <div class="row">
                             <div class="input-field col m6 margin-top-0">
                                 <h6 class="margin-bottom-0">Nombre<span class="required">*</span></h6>
-                                <input name="name" placeholder="Juan" type="text" class="validate"
+                                <input name="name" placeholder="Juan" type="text" class="validate" maxlength="36"
                                 <% if(order.name) { %>value="<%= order.name %>"<% } %> required>
                             </div>
                             <div class="input-field col m6 margin-top-0">
                                 <h6 class="margin-bottom-0">Apellido<span class="required">*</span></h6>
-                                <input name="surname" placeholder="Pérez" type="text" class="validate"
+                                <input name="surname" placeholder="Pérez" type="text" class="validate" maxlength="36"
                                 <% if(order.surname) { %>value="<%= order.surname %>"<% } %> required>
                             </div>
                         </div>
@@ -39,20 +39,21 @@
                             <div class="input-field col m6 margin-top-0">
                                 <h6 class="margin-bottom-0">Nro. de Teléfono Celular<span class="required">*</span></h6>
                                 <small>Lo usaremos para ponernos en contacto con vos, si tenes WhatsApp mejor!</small>
-                                <input name="cellphone" placeholder="1144556677" type="text" class="validate"
+                                <input name="cellphone" placeholder="1144556677" type="text" class="validate" maxlength="36"
                                 <% if(order.cellphone) { %>value="<%= order.cellphone %>"<% } %> required>
                             </div>
                             <div class="input-field col m6 margin-top-0">
                                 <h6 class="margin-bottom-0">Usuario de Instagram (opcional)</h6>
                                 <small>También podemos avisarte por este medio si querés</small>
-                                <input name="instagramUser" placeholder="@jperez" type="text" class="validate"
+                                <input name="instagramUser" placeholder="@jperez" type="text" maxlength="36"
                                 <% if(order.instagramUser) { %>value="<%= order.instagramUser %>"<% } %>>
                             </div>
                         </div>
                     </div>
                     <div class="card-action right-align">
                         <a href="/photo_upload/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
-                        <a class="waves-effect waves-light-3 grey lighten-3 black-text btn btn-next">Siguiente</a>
+                        <a class="waves-effect waves-light-3 grey lighten-3 black-text btn btn-next
+                        <% if(!dataIsValid) { %> disabled <% } %>">Siguiente</a>
                     </div>
                 </div>
             </div>
