Notification Logic && order download

--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="card-action right-align">
-                        <a class="waves-effect waves-light-3 btn btn-primary btn-next"><i class="material-icons left">cloud_download</i>Descargar</a>
+                        <a href="<%= order.hash %>/download" class="waves-effect waves-light-3 btn btn-primary btn-next"><i class="material-icons left">cloud_download</i>Descargar</a>
                     </div>
                 </div>
             </div>
