--- a/app/web/views/photo_upload.html
+++ b/app/web/views/photo_upload.html
@@ -61,7 +61,7 @@
                                             <% photos.forEach(function(photo, photoIndex){ %>
                                             <li class="collection-item avatar photo-item saved" data-photo="<%= photo %>">
                                                 <img class="circle responsive-img" src="/photos/<%= order.hash %>/<%= photo %>">
-                                                <span class="title"><span><%= photo.replace(/-[0-9]*$/g, '') %></span></span>
+                                                <span class="title"><span><%= photo.replace(/^[0-9]*-/g, '') %></span></span>
                                                 <p class="details"></p>
                                                 <a class="secondary-content" href="#"><i class="material-icons" onclick="onDeletePhotoButton(this)">clear</i></a>
                                             </li>
