--- a/app/web/views/product.html
+++ b/app/web/views/product.html
@@ -23,7 +23,7 @@
                         <h6>Selecciona tu Producto <span class="required">*</span></h6>
                         <div class="row">
                             <% products.forEach(function(product, productIndex){ %>
-                            <div class="col s6 m3">
+                            <div class="col s6 m4 l3">
                                 <div class="selectable-item">
                                     <div class="card">
                                         <div class="image-container <% if(order && order.ProductId == product.id ) { %>selected<% } %>" 
