Fix heights option in products view

--- a/app/web/views/product.html
+++ b/app/web/views/product.html
@@ -24,7 +24,7 @@
                         <div class="row">
                             <% products.forEach(function(product, productIndex){ %>
                             <div class="col s6 m4 l3">
-                                <div class="selectable-item">
+                                <div class="selectable-item fix-height">
                                     <div class="card">
                                         <div class="image-container <% if(order && order.ProductId == product.id ) { %>selected<% } %>" 
                                             style="background-image: url('<%= product.image %>')">
