--- a/app/web/views/customer_info.html
+++ b/app/web/views/customer_info.html
@@ -17,7 +17,7 @@
     <div class="content">
         <div class="row">
             <div class="col m8 offset-m2">
-                <div class="card">
+                <div class="card card-base">
                     <div class="card-content">
                         <h4>Nuevo Pedido</h4>
                         <p class='required'>*Obligatorio</p>
