--- a/app/web/views/completed_order.html
+++ b/app/web/views/completed_order.html
@@ -17,7 +17,7 @@
     <div class="content">
         <div class="row">
             <div class="col s12 col m8 offset-m2">
-                <div class="card">
+                <div class="card card-base">
                     <div class="card-content">
                         <h5>¡Todo listo!</h5>
                         <h6>Tu pedido fue registrado y nos comunicaremos con vos cuando este listo para ser entregado.</h6>
