--- a/app/web/views/detail.html
+++ b/app/web/views/detail.html
@@ -17,7 +17,7 @@
     <div class="content">
         <div class="row">
             <div class="col s12 col m8 offset-m2">
-                <div class="card">
+                <div class="card card-base">
                     <div class="card-content">
                         <h5>Ya casi es tuyo!</h5>
                         <p>Revisá que este todo en orden</p>
