--- a/app/web/views/completed_order.html
+++ b/app/web/views/completed_order.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flor Barrau Fotografía</title>
     <link rel="shortcut icon" type="image/png" href="/img/favicon.ico" />
+    <meta name="theme-color" content="rgb(158, 145, 98)">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/lib/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/css/style.css">
