--- a/app/web/views/typography.html
+++ b/app/web/views/typography.html
@@ -31,8 +31,8 @@
                             <% typographies.forEach(function(typography, typographyIndex){ %>
                             <div class="col s6 m4 l3">
                                 <div class="selectable-item <%= typography.price == 0 ? 'none' : '' %>">
-                                    <div class="card">
-                                        <div class="image-container <% if(order && order.Text && order.Text.TypographyId == typography.id ) { %>selected<% } %>"
+                                    <div class="card <% if(order && order.Text && order.Text.TypographyId == typography.id ) { %>selected<% } %>">
+                                        <div class="image-container"
                                             style="background-image: url('<%= typography.image %>')"></div>
                                     </div>
                                     <p>
