--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -41,7 +41,7 @@
                                 </li>
                                 <li class="collection-item avatar">
                                     <img class="circle responsive-img" src="<%= (order.Text.Typography.image && order.Text.Typography.image != '')? order.Text.Typography.image : '/img/default.jpg' %>">
-                                    <span class="title"><span>Fondo</span></span>
+                                    <span class="title"><span>Tipografía</span></span>
                                     <p class="details"><span><%= order.Text.Typography.name %></span></p>
                                     <span class="secondary-content">$<%= order.Text.Typography.price %></span>
                                 </li>
