--- a/app/web/views/photo_upload.html
+++ b/app/web/views/photo_upload.html
@@ -88,6 +88,7 @@
 <script src="/lib/materialize/js/materialize.min.js"></script>
 <script src="/lib/dropzone/dropzone.js"></script>
 <script src="/js/services/orderService.js"></script>
+<script src="/js/services/photoService.js"></script>
 <script>
     var acceptedPhotos = <%= order.Product.acceptedPhotos %>;
 </script>
