disable button on final send

--- a/app/web/views/detail.html
+++ b/app/web/views/detail.html
@@ -95,8 +95,8 @@
                     </div>
                     <div class="card-action right-align">
                         <a href="/customer_info/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
-                        <a class="waves-effect waves-light-3 btn btn-primary btn-next
-                        <% if(!dataIsValid) { %> disabled <% } %>">Finalizar</a>
+                        <button class="waves-effect waves-light-3 btn btn-primary btn-next
+                        <% if(!dataIsValid) { %> disabled <% } %>">Finalizar</button>
                     </div>
                 </div>
             </div>
