--- a/app/web/views/typography.html
+++ b/app/web/views/typography.html
@@ -30,7 +30,7 @@
                         <div class="row">
                             <% typographies.forEach(function(typography, typographyIndex){ %>
                             <div class="col s6 m4 l3">
-                                <div class="selectable-item <%= typography.price == 0 ? 'none' : '' %>">
+                                <div class="selectable-item <%= typography.price <= 0 ? 'none' : '' %>">
                                     <div class="card <% if(order && order.Text && order.Text.TypographyId == typography.id ) { %>selected<% } %>">
                                         <div class="image-container"
                                             style="background-image: url('<%= typography.image %>')"></div>
@@ -59,7 +59,7 @@
                     <div class="card-action right-align">
                         <a href="/background/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat">Atrás</a>
                         <a class="waves-effect waves-light-3 grey lighten-3 black-text btn btn-next
-                        <% if(!order || !order.Text || !order.Text.TypographyId || !order.Text.value) { %> disabled <% } %>">Siguiente</a>
+                        <% if(!isValid) { %> disabled <% } %>">Siguiente</a>
                     </div>
                 </div>
             </div>
