--- a/app/web/views/photo_upload.html
+++ b/app/web/views/photo_upload.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/lib/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/lib/animate.css/animate.min.css">
+    <link rel="stylesheet" href="/lib/loading-bar/loading-bar.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -87,6 +88,7 @@
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/materialize/js/materialize.min.js"></script>
 <script src="/lib/dropzone/dropzone.js"></script>
+<script src="/lib/loading-bar/loading-bar.js"></script>
 <script src="/js/services/orderService.js"></script>
 <script src="/js/services/photoService.js"></script>
 <script>
