--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -81,23 +81,12 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     padding-left: 25px;
     line-height: 20px;
 }
-/*
-.selectable-item {
-    height: 40vh;
-}
 
-@media screen and (min-height: 768px) {
-    .selectable-item {
-        height: 35vh;
-    }
+.ldBar-label {
+    font-size: 0.55em;
+    padding-bottom: 5px;
+    color: #212121;
 }
-
-@media screen and (min-height: 1024px) {
-    .selectable-item {
-        height: 25vh;
-    }
-}
-*/
 
 .selectable-item label {
     color: #212121;
