--- a/app/web/views/photo_upload.html
+++ b/app/web/views/photo_upload.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/lib/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/lib/animate.css/animate.min.css">
     <link rel="stylesheet" href="/lib/loading-bar/loading-bar.css">
+    <link rel="stylesheet" href="/lib/snackbar/snackbar.min.css">    
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -89,6 +90,7 @@
 <script src="/lib/materialize/js/materialize.min.js"></script>
 <script src="/lib/dropzone/dropzone.js"></script>
 <script src="/lib/loading-bar/loading-bar.js"></script>
+<script src="/lib/snackbar/snackbar.min.js"></script>
 <script src="/js/services/orderService.js"></script>
 <script src="/js/services/photoService.js"></script>
 <script>
