Add text value to checkout view

--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -42,7 +42,10 @@
                                 <li class="collection-item avatar">
                                     <img class="circle responsive-img" src="<%= (order.Text.Typography.image && order.Text.Typography.image != '')? order.Text.Typography.image : '/img/default.jpg' %>">
                                     <span class="title"><span>Tipografía</span></span>
-                                    <p class="details"><span><%= order.Text.Typography.name %></span></p>
+                                    <div class="details">
+                                        <p><%= order.Text.Typography.name %></p>
+                                        <p>Texto: <%= (order.Text.value)? order.Text.value : '' %></p>
+                                    </div>
                                     <span class="secondary-content">$<%= order.Text.Typography.price %></span>
                                 </li>
                             </ul>
