--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -66,7 +66,10 @@
                                     <li class="collection-header">
                                         <h6 class="margin-bottom-0 margin-top-0"><b>Forma de Entrega</b></h6>
                                     </li>
-                                    <li class="collection-item center-align"><%= order.deliveryMethod == 'shipping' ? 'Envío' : 'Punto de Entrega' %></li>
+                                    <li class="collection-item center-align">
+                                        <%= order.deliveryMethod == 'shipping' ? 'Envío' : 'Punto de Entrega' %>
+                                        <%= (order.deliveryMethod == 'deliveryPoint' && order.deliveryPoint && order.deliveryPoint != '') ? `(${order.deliveryPoint})` : '' %>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
