--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/lib/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="/lib/pace/pace-theme.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -97,6 +98,7 @@
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/materialize/js/materialize.min.js"></script>
+<script src="/lib/pace/pace.min.js"></script>
 <% if (order) { %>
 <script>
     var orderId = "<%= order.hash %>";
