--- a/app/web/views/photo_upload.html
+++ b/app/web/views/photo_upload.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/lib/loading-bar/loading-bar.css">
     <link rel="stylesheet" href="/lib/snackbar/snackbar.min.css">    
     <link rel="stylesheet" href="/css/style.css">
+    <link href="/lib/pace/pace-theme.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -88,6 +89,7 @@
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/materialize/js/materialize.min.js"></script>
+<script src="/lib/pace/pace.min.js"></script>
 <script src="/lib/dropzone/dropzone.js"></script>
 <script src="/lib/loading-bar/loading-bar.js"></script>
 <script src="/lib/snackbar/snackbar.min.js"></script>
