--- a/app/web/views/typography.html
+++ b/app/web/views/typography.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/lib/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link href="/lib/pace/pace-theme.css" rel="stylesheet" />
 </head>
 <body>
     <div class="background-header"></div>
@@ -68,6 +69,7 @@
 </body>
 <script src="/lib/jquery/jquery.min.js"></script>
 <script src="/lib/materialize/js/materialize.min.js"></script>
+<script src="/lib/pace/pace.min.js"></script>
 <script src="/js/base.js"></script>
 <script src="/js/services/orderService.js"></script>
 <% if (order) { %> 
